[package]
name = "rskv-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rskv]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rskv_fuzz"
path = "fuzz_targets/rskv_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "concurrent_fuzz"
path = "fuzz_targets/concurrent_fuzz.rs"
test = false
doc = false
bench = false
